# Crawler

./: demo.py  main.py  pyproject.toml
crawler/: __init__.py  fetcher.py  main.py  models.py  parser.py
